<resources>
    <string name="app_name">MBrowser</string>
    <string name="search_or_type_url">Search or Type URL</string>
    <string name="share">Share</string>
    <string name="back">Back</string>
    <string name="refresh">Refresh</string>
    <string name="setting">Setting</string>
    <string name="bookmarks">Bookmark</string>
    <string name="about">About</string>
    <string name="history">History</string>
    <string name="desktop_site">Desktop site</string>
    <string name="home">Home</string>
    <string name="ad_blocker">Ad Blocker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="important">Important Sites</string>
    <string name="trending">Trending Sites</string>
    <string name="username">UserName</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="facebook_sign_in">Facebook Sign In</string>
    <string name="loginText">I want to Login</string>
    <string name="signInText">I want to Sign Up</string>
    <string name="join">Join</string>


    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo">TODO</string>
    <string name="more">More</string>
    <string name="forward">Forward</string>
    <string name="user">User</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="give_your_feedback">Give your feedback</string>
    <string name="enter_feedback">Enter feedback</string>


</resources>