<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/drawerLayout"
    android:background="@color/white"
    android:contentDescription="@string/app_name">

    <soup.neumorphism.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.abdularis.civ.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                app:neumorph_shadowElevation="4dp"
                app:neumorph_shadowColorDark="@color/neumorph_shadowcolorDark"
                app:neumorph_shadowColorLight="@color/neumorph_shadowColorLight"
                android:text="@string/join"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/profileImage"
                app:layout_constraintStart_toStartOf="@+id/profileImage"
                app:layout_constraintTop_toBottomOf="@+id/profileImage" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                android:text="@string/about"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signIn"
                app:drawableLeftCompat="@android:drawable/ic_menu_info_details"
                app:drawableTint="@color/black" />

            <TextView
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/share"
                android:textColor="@color/black"
                android:drawableStart="@drawable/ic_share"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/share" />

            <TextView
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/setting"
                android:textColor="@color/black"
                app:drawableStartCompat="@drawable/ic_setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/history" />

            <TextView
                android:id="@+id/bookmarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/bookmarks"
                android:textColor="@color/black"
                app:drawableStartCompat="@drawable/ic_bookmark"
                app:layout_constraintEnd_toEndOf="@+id/setting"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/setting"
                app:layout_constraintTop_toBottomOf="@+id/setting" />

            <TextView
                android:id="@+id/history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/history"
                android:textColor="@color/black"
                app:drawableStartCompat="@drawable/ic_history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <TextView
                android:id="@+id/desktop_site"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/desktop_site"
                android:textColor="@color/black"
                app:drawableStartCompat="@drawable/ic_computer"
                app:layout_constraintEnd_toStartOf="@+id/check_desktop_mode"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookmarks" />

            <CheckBox
                android:id="@+id/check_desktop_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/desktop_site"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookmarks" />

            <TextView
                android:id="@+id/ad_blocker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/ad_blocker"
                android:textColor="@color/black"
                app:drawableStartCompat="@drawable/ic_block"
                app:layout_constraintEnd_toStartOf="@+id/switch_ad_blocker"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/desktop_site" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_ad_blocker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                style="@style/SCBSwitch"
                android:textColorLink="@color/light_orange"
                app:layout_constraintBottom_toBottomOf="@+id/ad_blocker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desktop_site"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </soup.neumorphism.NeumorphCardView>

</androidx.drawerlayout.widget.DrawerLayout>